src/MedVisit.Api/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: medvisit-api
  name: medvisit-api
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: medvisit-api
